Eth2Near: bug fix, improvements. Update DAG roots.
* Ethashproof: remove git submodule, add as a local module instead.
* Ethashproof: fix u32 overflow bug in `algorithm.go` during the
  `dataset` calculation.
* EthClient: Update DAG merkle roots.
* Update .gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@ coverage
 coverage.json
 testdata
 target
+
+eth2near/ethashproof/cmd/epoch/epoch
+eth2near/ethashproof/cmd/relayer/relayer
+eth2near/ethashproof/cmd/cache/cache
