--- a/contracts/eth/nearprover/package.json
+++ b/contracts/eth/nearprover/package.json
@@ -9,7 +9,6 @@
     "license": "MIT",
     "devDependencies": {
         "@nomiclabs/hardhat-ethers": "^2.0.1",
-        "nearbridge": "../nearbridge",
         "chai": "^4.3.3",
         "eslint": "^6.3.0",
         "eslint-config-standard": "^14.1.0",
@@ -20,6 +19,7 @@
         "eth-gas-reporter": "^0.2.11",
         "ethers": "^5.0.31",
         "hardhat": "^2.1.1",
+        "rainbow-bridge": "../nearbridge",
         "rainbow-bridge-lib": "^2.0.0",
         "solc": "0.8.3",
         "solidity-coverage": "^0.7.16",
